--- a/src/views/presupuesto/all-presupuestos.hbs
+++ b/src/views/presupuesto/all-presupuestos.hbs
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     {{#if presupuesto}}
     <div class="text-center col-12">
-        <a href="/presupuesto/add" class="btn btn-primary p-4 text-light fw-bold fs-4 rounded">Agregar presupuesto</a>
+        <a href="/presupuesto/add" class="btn btn-primary p-4 text-white fw-bold fs-4 rounded">Agregar presupuesto</a>
     </div>
 
     <div class="row justify-content-center mt-4">
@@ -70,11 +70,11 @@
 
 
 {{else}}
-<div class="col card my-5 py-5 mx-auto bg-dark">
+<div class="col-12 col-md-10 card my-2 py-5 mx-auto bg-dark">
     <div class="card-body text-center">
-        <h1 class="display-4 fw-bold text-light">Aun no haz creado <br>un presupuesto</h1>
-        <p class="lead fs-3 text-light"></p>
-        <a href="/presupuesto/add" class="btn btn-primary p-4 text-light fw-bold fs-4 rounded">Crea uno
+        <h1 class="display-4 fw-bold text-white">Aun no haz creado <br>un presupuesto</h1>
+        <p class="lead fs-3 text-white"></p>
+        <a href="/presupuesto/add" class="btn btn-primary p-4 text-white fw-bold fs-4 rounded">Crea uno
             ahora!</a>
     </div>
 </div>
