--- a/src/views/presupuesto/new-presupuesto.hbs
+++ b/src/views/presupuesto/new-presupuesto.hbs
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="bg-light border border-secondary p-0">
         <div>
-            <h1 class="text-center bg-dark text-light py-2">Crear Presupuesto</h1>
+            <h1 class="text-center bg-dark text-white py-2">Crear Presupuesto</h1>
             <p class="fs-4 lead border border border-2 py-2 ps-4">Detalles del presupuesto:</p>
         </div>
         <div class="mt-3">
