--- a/src/views/proveedores/edit-proveedor.hbs
+++ b/src/views/proveedores/edit-proveedor.hbs
@@ -1,40 +1,57 @@
-<div class="col-md-4 mx-auto mt-5">
-    <div class="card">
-        <div class="card-header bg-dark text-center">
-            <h3 class="text-white">Editar Proveedor</h3>
-        </div>
-        <div class="card-body">
-            <form action="/proveedores/edit-proveedor/{{proveedor._id}}?_method=PUT" method="POST">
-                <input type="hidden" name="_method" value="PUT" />
+<div class="row justify-content-center">
+    <div class="col-md-6 mx-auto">
+        <div class="card">
+            <div class="card-header bg-dark text-center">
+                <h3 class="text-white">Editar Proveedor</h3>
+            </div>
+            <div class="card-body">
+                <form action="/proveedores/edit-proveedor/{{proveedor._id}}?_method=PUT" method="POST">
+                    <input type="hidden" name="_method" value="PUT" />
 
-                <div class="mb-3">
-                    <label class="form-label" for="name">Nombre:</label>
-                    <input type="text" name="name" class="form-control" value="{{proveedor.name}}" />
-                </div>
-                <div class="mb-3">
-                    <label for="category">Categoria:</label>
-                    <input type="text" name="category" class="form-control" value="{{proveedor.category}}" />
-                </div>
-                <div class="mb-3">
-                    <label for="phone">Telefono:</label>
-                    <input type="tel" name="phone" class="form-control" value="{{proveedor.phone}}" />
-                </div>
-                <div class="mb-3">
-                    <label for="address">Direccion:</label>
-                    <input type="text" name="address" class="form-control" value="{{proveedor.address}}" />
-                </div>
-                <div class="mb-3">
-                    <label for="email">Correo:</label>
-                    <input type="email" name="email" class="form-control" value="{{proveedor.email}}" />
-                </div>
-                <div class="mb-3">
-                    <label for="description">Descripcion:</label>
-                    <textarea name="description" class="form-control">{{proveedor.description}}</textarea>
-                </div>
-                <button class="btn btn-primary w-100 fw-bold" type="submit">
-                    Guardar
-                </button>
-            </form>
+                    <div class="mb-2">
+                        <label class="form-label" for="name">Nombre:</label>
+                        <input type="text" name="name" class="form-control" value="{{proveedor.name}}" id="nameInput"
+                            required />
+                    </div>
+                    <div class="mb-2">
+                        <label for="phone">Categoria:</label>
+                        <select class="form-select" name="category" id="category" required>
+                            {{#if errors}}
+                            <option value="" disabled>Selecciona uno</option>
+                            {{#each category}}
+                            <option value="{{this}}">{{this}}</option>
+                            {{/each}}
+                            {{else}}
+                            <option value="" disabled>Selecciona uno</option>
+                            {{#each proveedor.category}}
+                            <option value="{{this}}">{{this}}</option>
+                            {{/each}}
+                            {{/if}}
+                        </select>
+                    </div>
+
+                    <div class="mb-2">
+                        <label for="phone">Telefono:</label>
+                        <input type="tel" name="phone" class="form-control" id="phone" value="{{proveedor.phone}}"
+                            maxlength="10" />
+                    </div>
+                    <div class="mb-2">
+                        <label for="address">Direccion:</label>
+                        <input type="text" name="address" class="form-control" value="{{proveedor.address}}" />
+                    </div>
+                    <div class="mb-2">
+                        <label for="email">Correo:</label>
+                        <input type="email" name="email" class="form-control" value="{{proveedor.email}}" />
+                    </div>
+                    <div class="mb-2">
+                        <label for="description">Descripcion:</label>
+                        <textarea name="description" class="form-control">{{proveedor.description}}</textarea>
+                    </div>
+                    <button class="btn btn-primary w-100 fw-bold" type="submit">
+                        Guardar
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
