--- a/src/views/proveedores/edit-proveedor.hbs
+++ b/src/views/proveedores/edit-proveedor.hbs
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center mt-3">
     <div class="col-md-6 mx-auto">
         <div class="card">
             <div class="card-header bg-dark text-center">
@@ -14,7 +14,7 @@
                             required />
                     </div>
                     <div class="mb-2">
-                        <label for="phone">Categoria:</label>
+                        <label for="phone">Tipo:</label>
                         <select class="form-select" name="category" id="category" required>
                             {{#if errors}}
                             <option value="" disabled>Selecciona uno</option>
