--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mt-3">
     <div class="card card-body p-5 mt-5">
         <h1 class="display-5 fw-bold">{{siteName}}</h1>
         <p class="lead ">Una aplicacion que te ayuda a gestionar de mejor manera tus eventos como organizador,
