--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -15,6 +15,7 @@
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/dashboard.css">
+    <link rel="stylesheet" type="text/css" href="/css/print.css" media="print">
     {{!-- Falvicon icon --}}
     <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
     <!--Montserrat Font-->
@@ -51,8 +52,6 @@
     <script src="/js/index.js"></script>
     <script type="module" src="/js/tablePresupuesto.js"></script>
     <script type="module" src="/js/formPresupuesto.js"></script>
-
-
 
 </body>
 
