--- a/src/views/presupuesto/dashboard.hbs
+++ b/src/views/presupuesto/dashboard.hbs
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row">
     <div>
         <div class="main-cards">
             <div class="card-dashboard">
