--- a/src/views/proveedores/all-proveedores.hbs
+++ b/src/views/proveedores/all-proveedores.hbs
@@ -1,8 +1,11 @@
 {{#if proveedores}}
 
-<div class="row bg-white mt-2">
-    <div class="align-items-center gap-1 mt-3 bg-light p-2">
-        <div class="row align-items-center justify-content-center mt-3 gap-1">
+<div class="row mt-3">
+    <div class="bg-white p-0">
+        <h1 class="text-center fw-bold bg-dark text-white py-2 text-uppercase">Proveedores</h1>
+
+        <div class="row justify-content-center mt-3">
+
             <div class="col-12 col-md-3 text-center mb-3 mb-md-0">
                 <a href="/proveedores/add"
                     class="btn btn-primary fw-bold rounded py-3 px-5 fs-3 px-md-3 px-lg-5">Agregar</a>
@@ -19,19 +22,17 @@
             </div>
 
             <div class="col-12 col-md-5">
-                <form id="filterForm">
-                    <label for="searchInput" class="form-label fw-bold">Buscar:</label>
-                    <div class="input-group">
-                        <input type="text" class="form-control" id="searchInput" placeholder="Buscar proveedor..." />
-                    </div>
-                </form>
+                <label for="searchInput" class="form-label fw-bold">Buscar:</label>
+                <div class="input-group">
+                    <input type="text" class="form-control" id="searchInput" placeholder="Buscar proveedor..." />
+                </div>
             </div>
         </div>
 
-
-        <div class="row col-12 border-2 border-top mx-auto mt-2" id="proveedoresContainer">
+        {{!-- cards Proveedores --}}
+        <div class="row col-12 border-2 border-top mx-auto mt-3 bg-light" id="proveedoresContainer">
             {{#each proveedores}}
-            <div class="col-md-6 col-lg-4 mt-4">
+            <div class="proveedor col-md-6 col-lg-4 mt-4">
                 <div class="card h-100" data-name="{{name}}" data-category="{{category}}">
                     <div class="card-header d-flex flex-row align-items-center justify-content-between">
                         <div>
@@ -67,14 +68,16 @@
                                 Indefinido
                                 {{/if}}
                             </div>
-                            <div class="my-2 mx-4 p-1 bg-light">
-                                <i class="fa-solid fa-memo"></i>
-                                {{#if description}}
-                                {{description}}
-                                {{else}}
-                                Indefinido
-                                {{/if}}
+                            {{#if description}}
+                            <div class="my-2 mx-4 p-1 bg-light card-with-description">
+                                <div class="flex-grow-1">{{description}}</div>
                             </div>
+                            {{else}}
+                            <div class="my-2 mx-4 p-1 bg-light card-with-description">
+                                <div class="flex-grow-1"></div>
+                            </div>
+                            {{/if}}
+
                         </div>
                         <!-- DELETE REQUEST -->
                         <div class="mt-auto">
