--- a/src/views/proveedores/new-proveedor.hbs
+++ b/src/views/proveedores/new-proveedor.hbs
@@ -1,8 +1,8 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center mt-3">
     <div class="col-md-6">
         <div class="card">
             <div class="card-header bg-dark text-center">
-                <h3 class="text-white">Crear Proveedor</h3>
+                <h3 class="text-white">Agregar Proveedor</h3>
             </div>
             <div class="card-body">
                 <form action="/proveedores/new-proveedor" method="POST">
