--- a/src/views/presupuesto/all-presupuestos.hbs
+++ b/src/views/presupuesto/all-presupuestos.hbs
@@ -1,7 +1,7 @@
 {{#if presupuesto}}
 
 <div class="row mt-3 ">
-    <div class="bg-white p-0 ">
+    <div class="bg-white p-0">
         <h1 class="text-center fw-bold bg-dark text-white py-2 text-uppercase">Presupuestos</h1>
 
         <div class="row justify-content-center mt-3">
@@ -10,7 +10,6 @@
                     class="btn btn-primary fw-bold rounded py-3 px-5 fs-3 px-md-3 px-lg-5">Agregar</a>
             </div>
         </div>
-
 
         <div class="row justify-content-center mt-3">
 
@@ -24,13 +23,13 @@
                 </select>
             </div>
 
-            {{!-- <div class="col-12 col-md-3 mb-3 mb-md-0">
+            <div class="col-12 col-md-3 mb-3 mb-md-0">
                 <label for="SelectCategory" class="form-label fw-bold">Fecha:</label>
                 <select id="SelectCategory" class="form-select">
                     <option value="Ascendente">Mas nuevo al mas viejo</option>
                     <option value="Descendente">Mas viejo al mas nuevo</option>
                 </select>
-            </div> --}}
+            </div>
 
             <div class="col-12 col-md-5">
                 <label for="searchInput" class="form-label fw-bold">Buscar:</label>
