--- a/src/views/presupuesto/dashboard.hbs
+++ b/src/views/presupuesto/dashboard.hbs
@@ -1,46 +1,87 @@
-<div class="row">
-    <div>
-        <div class="main-cards">
+<div class="row mt-3">
+    <div class="bg-white p-0">
+        <h1 class="text-center fw-bold bg-dark text-white py-2 text-uppercase">DashboarD</h1>
+
+        <div class="main-cards d-flex justify-content-between flex-wrap px-4 py-2 mt-2">
+
             <div class="card-dashboard">
                 <div class="card-inner">
-                    <p class="text-primary">TOTAL CREADOS</p>
-                    <span class="material-icons-outlined text-blue">check_circle_outline</span>
+                    <p class="text-primary">COMPLETADOS</p>
+                    <span class="material-icons-outlined text-blue">done_all</span>
                 </div>
-                <span class="text-primary font-weight-bold" id="creadosValue"></span>
+                <span class="text-primary font-weight-bold" id="completadosValue">{{countPresupuesto.completed}}</span>
+            </div>
+
+            <div class="card-dashboard">
+                <div class="card-inner">
+                    <p class="text-primary">ACEPTADOS</p>
+                    <span class="material-icons-outlined text-green">thumb_up</span>
+                </div>
+                <span class="text-primary font-weight-bold" id="aceptadosValue">{{countPresupuesto.accepted}}</span>
+            </div>
+
+            <div class="card-dashboard">
+                <div class="card-inner">
+                    <p class="text-primary">EDITANDO</p>
+                    <span class="material-icons-outlined text-orange">edit</span>
+                </div>
+                <span class="text-primary font-weight-bold" id="editandoValue">{{countPresupuesto.editing}}</span>
+            </div>
+
+            <div class="card-dashboard">
+                <div class="card-inner">
+                    <p class="text-primary">RECHAZADOS</p>
+                    <span class="material-icons-outlined text-red">warning</span>
+                </div>
+                <span class="text-primary font-weight-bold" id="rechazadosValue">{{countPresupuesto.refused}}</span>
             </div>
 
             <div class="card-dashboard">
                 <div class="card-inner">
                     <p class="text-primary">PAGADOS</p>
-                    <span class="material-icons-outlined text-orange">payment</span>
+                    <span class="material-icons-outlined text-green">payment</span>
                 </div>
-                <span class="text-primary font-weight-bold" id="pagadosValue"></span>
+                <span class="text-primary font-weight-bold" id="pagadosValue">{{countPresupuesto.paid}}</span>
             </div>
 
             <div class="card-dashboard">
                 <div class="card-inner">
                     <p class="text-primary">PENDIENTES DE PAGO</p>
-                    <span class="material-icons-outlined text-green">schedule</span>
+                    <span class="material-icons-outlined text-orange">schedule</span>
                 </div>
-                <span class="text-primary font-weight-bold" id="pendientesValue"></span>
+                <span class="text-primary font-weight-bold" id="pendientesValue">{{countPresupuesto.pending}}</span>
             </div>
 
             <div class="card-dashboard">
                 <div class="card-inner">
-                    <p class="text-primary">RECHASADOS</p>
-                    <span class="material-icons-outlined text-red">warning</span>
+                    <p class="text-primary">NO PAGADOS</p>
+                    <span class="material-icons-outlined text-red">error_outline</span>
                 </div>
-                <span class="text-primary font-weight-bold" id="rechazadosValue"></span>
+                <span class="text-primary font-weight-bold" id="noPagadosValue">{{countPresupuesto.noPaid}}</span>
             </div>
 
+            <div class="card-dashboard">
+                <div class="card-inner">
+                    <p class="text-primary">TOTAL CREADOS</p>
+                    <span class="material-icons-outlined text-blue">check_circle_outline</span>
+                </div>
+                <span class="text-primary font-weight-bold" id="creadosValue">{{countPresupuesto.totalCreate}}</span>
+            </div>
         </div>
-        <div class="charts">
-            <div class="charts-card">
-                <p class="chart-title">PRESENTACIÓN GRÁFICA</p>
-                <div id="pie-chart"></div>
+
+        <div class="row justify-content-evenly charts mt-3">
+            <div class="charts-card col-5">
+                <p class="chart-title">ESTADO DE PRESUPUESTOS</p>
+                <div id="status-pie-chart"></div>
+            </div>
+
+            <div class="charts-card col-5">
+                <p class="chart-title">ESTADO DE PAGOS</p>
+                <div id="payment-pie-chart"></div>
             </div>
         </div>
     </div>
 </div>
+
 
 <script src="/js/dashboard.js"></script>
