--- a/src/views/presupuesto/all-presupuestos.hbs
+++ b/src/views/presupuesto/all-presupuestos.hbs
@@ -1,17 +1,15 @@
 {{#if presupuesto}}
 
 <div class="row mt-3 ">
-    <div class="bg-white p-0">
+    <div class="bg-white p-0 ">
         <h1 class="text-center fw-bold bg-dark text-white py-2 text-uppercase">Presupuestos</h1>
 
         <div class="row justify-content-center mt-3">
+
             <div class="col-12 col-md-3 text-center mb-3 mb-md-0">
-                <a href="/proveedores/add"
+                <a href="/presupuesto/add"
                     class="btn btn-primary fw-bold rounded py-3 px-5 fs-3 px-md-3 px-lg-5">Agregar</a>
             </div>
-        </div>
-
-        <div class="row justify-content-center mt-3">
 
             <div class="col-12 col-md-3 mb-3 mb-md-0">
                 <label for="SelectCategory" class="form-label fw-bold">Tipos:</label>
@@ -23,40 +21,31 @@
                 </select>
             </div>
 
-            <div class="col-12 col-md-3 mb-3 mb-md-0">
-                <label for="SelectCategory" class="form-label fw-bold">Fecha:</label>
-                <select id="SelectCategory" class="form-select">
-                    <option value="Ascendente">Mas nuevo al mas viejo</option>
-                    <option value="Descendente">Mas viejo al mas nuevo</option>
-                </select>
-            </div>
-
             <div class="col-12 col-md-5">
                 <label for="searchInput" class="form-label fw-bold">Buscar:</label>
                 <div class="input-group">
                     <input type="text" class="form-control" id="searchInput" placeholder="Buscar Evento..." />
                 </div>
             </div>
-
-
-
         </div>
 
         {{!-- Table Presupuesto --}}
         <div class="table-responsive mt-4">
             <table class="table table-striped table-light presupuesto-index">
-                <tr class="table-header">
-                    <th>#</th>
-                    <th>Fecha</th>
-                    <th>Evento</th>
-                    <th>Tipo</th>
-                    <th>Cliente</th>
-                    <th>Estado</th>
-                    <th>Costo</th>
-                    <th class="text-center">Opciones</th>
-                </tr>
+                <thead>
+                    <tr class="table-header table-btn">
+                        <th>#</th>
+                        <th>Fecha</th>
+                        <th>Evento</th>
+                        <th>Tipo</th>
+                        <th>Cliente</th>
+                        <th>Estado</th>
+                        <th>Costo</th>
+                        <th class="text-center">Opciones</th>
+                    </tr>
+                </thead>
                 {{#each presupuesto}}
-                <tr>
+                <tr class="rows-jq">
                     <th>{{incrementIndex @index}}</th>
                     <td>{{dateActivity}}</td>
                     <td>{{nameActivity}}</td>
